			   XPCE ChangeLog
			   ==============

VERSION 6.5.31, distributed with SWI-Prolog 5.5.31
==================================================

VERSION 6.5.30, distributed with SWI-Prolog 5.5.30
==================================================

* ADDED: library(print_graphics), method ->save_postscript

VERSION 6.5.29, distributed with SWI-Prolog 5.5.29
==================================================
	
* FIXED: `unclip window' recursive event processing (leaving empty `unclip'
  windows behind.

* FIXED: Windows: draw bitmap objects on printer and metafile.

* FIXED: Bug#87: conversion of wide-string to source_location object.
  Dmitry.

* ADDED: Partial support for creating proper PostScript from masked
  colour images (often used as icons).

* FIXED: crash in `graphical<-postscript' for graphicals with zero width
  and/or height (sometimes used to fill space).


VERSION 6.5.28, distributed with SWI-Prolog 5.5.28
==================================================
	
* FIXED: Bug#85: conversion of unicode SWI-Prolog string objects to
  XPCE strings.  Dmitry.

* FIXED: Bug#81: dynamically deal with dropshadow setting for popup frames
  to avoid crash on windows versions older than XP. Holger Kanwischer.

* ADDED: Bug#79: `frame->icon' also sets the Windows `big' icon.
  Holger Kanwischer.


VERSION 6.5.27, distributed with SWI-Prolog 5.5.27
==================================================
	
* FIXED: `menu->selection' for single-selection menus sometimes wasn't
  honoured.

* FIXED: PceEmacs: colourising of use_module directives pointing to 
  non-existing files.

* FIXED: `file->kind'.   Petter Egesund.

VERSION 6.5.26, distributed with SWI-Prolog 5.5.26
==================================================
	
* Consistent numbering (SuSE 10.0 beta2)

VERSION 6.5.24, distributed with SWI-Prolog 5.5.24
==================================================

* FIXED: Text clipping in X11 systems using the Xft text rendering library.
